Worked on detail page

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="styles/list.css">
     <link rel="stylesheet" href="styles/item-card.css">
     <link rel="stylesheet" href="styles/item-grid.css">
+    <link rel="stylesheet" href="styles/detail.css">
     <!-- endbuild -->
   </head>
   <body>
@@ -56,7 +57,7 @@
 
     <div class="container-fluid">
 
-      <datadriver-inventory data-from="7596"></datadriver-inventory>
+      <datadriver-inventory data-from="7596" data-env="dev"></datadriver-inventory>
      
     </div>
 
