--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="styles/item-card.css">
     <link rel="stylesheet" href="styles/item-grid.css">
     <link rel="stylesheet" href="styles/detail.css">
+    <link rel="stylesheet" href="styles/specials.css">
     <!-- endbuild -->
   </head>
   <body>
@@ -57,7 +58,7 @@
 
     <div class="container-fluid">
 
-      <datadriver-inventory data-from="1703" data-env="dev"></datadriver-inventory>
+      <datadriver data-from="1703" data-type="specials" data-env="test"></datadriver>
      
     </div>
 
@@ -98,6 +99,7 @@
         <script src="scripts/services/compareService.js"></script>
         <script src="scripts/inventory/list.js"></script>
         <script src="scripts/inventory/detail.js"></script>
+        <script src="scripts/inventory/specials.js"></script>
         
         <!-- endbuild -->
     <script>
