added style provider switching

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
 
     <div class="container-fluid">
 
-      <datadriver data-from="1703" data-type="specials" data-env="test"></datadriver>
+      <datadriver data-from="1703" data-type="specials" data-style="style" data-env="test"></datadriver>
      
     </div>
 
